<resources>
    <string name="app_name">Baniya</string>

    <string name="action_settings">Settings</string>

    <string name="nav_menu_group_header_my_account">My Account</string>

    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_mobile">Mobile</string>
    <string name="nav_menu_tablet">Tablet</string>
    <string name="nav_menu_laptop">Laptop</string>
    <string name="nav_menu_watch">Watch</string>
    <string name="nav_menu_headphones">Headphones</string>
    <string name="nav_menu_my_orders">My Orders</string>
    <string name="nav_menu_login">Login</string>
    <string name="nav_menu_logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_hint">Search</string>
    <string name="cart_hint">cart</string>
    <string name="server_client_id">127987743427-l83aqqktu6nmviel14hiodoamh0c3utv.apps.googleusercontent.com</string>
    <string name="facebook_app_id">176614773702553</string>
    <string name="fb_login_protocol_scheme">fb176614773702553</string>




</resources>
